2004-01-18  David Malcolm <david@davemalcolm.demon.co.uk>

	* test-nesting.xml

	New file: a test case for fixing bug #124507 (crash when nesting block elements inside a span tag) and bug #130235 (improve the look of nested span tags)

2004-01-13  Daniel Larsson <Daniel.Larsson@servicefactory.se>

	* docbook.xds.in
	Added a couple of DocBook tags.

2004-01-11  Boris Goldowsky <boris@alum.mit.edu>

	* dispspec-template.xds
	New file.

2004-01-07  Geert Stappers <stappers@stappers.nl>

	* Makefile.am

	Ship the tarball also with the .xds.in files.

2003-12-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* relax-ng.xds

	Fixed an over-zealous search-and-replace operation

2003-11-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* docbook.xds.in, website-webpage.xds, xds.dtd

	Replaced filename-attribute with filename-xpath

	* xds.dtd

	Made tag attribute REQUIRED

	* xds.dtd

	Changed xml:lang attribute to be CDATA (to allow sr@Latn); make it optional to support untranslated strings

	* dispspec.xds, docbook.xds, forrest-document.xds, kernel-traffic-newsletter.xds, xhtml1-strict.xds

	Removed files; they should now be generated from the xds.in files by intltool

	* Makefile.am

	Added a custom rule (due to non-standard xds extension) that uses intltool to generate xds files from xds.in files
	
	* dispspec.xds.in, docbook.xds.in, forrest-document.xds.in, kernel-traffic-newsletter.xds.in, xhtml1-strict.xds.in

	New files
	
2003-11-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* readme.xds, xds.dtd

	Removed paragraph type

	* xds.dtd

	Allow more than one <name> and <short-desc> below an <element>, locale->language; make it REQUIRED and a NMTOKEN
	
	* cnxml.xds, dispspec.xds, docbook.xds, forrest-document.xds, kernel-traffic-newsletter.xds, readme.xds, relax-ng.xds, website-layout.xds, website-webpage.xds, xhtml1-strict.xds, xsl.xds
	